--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -2,7 +2,13 @@
   Welcome <b>{{profile?.displayName}}</b>!
 </p>
 <div style="width: 800px; max-width: 800px; word-break: break-all; font-family: 'Courier New', Courier, monospace;">{{profile2json}}</div>
-<br/><br/><br/>
 
-<button (click)="showAccessToken()">Show Access token</button>
-<div style="width: 800px; max-width: 800px; word-break: break-all; font-family: 'Courier New', Courier, monospace;">{{accessToken}}</div>
+<br/><br/><br/>
+<button (click)="createTeamsMeeting()">Create a Teams Meeting</button>
+<br/>
+<br/>
+click the following URL to join the teams meeting: <a href="{{meetingURL}}">{{meetingURL}}</a>
+
+<br/>
+<br/>
+<div style="width: 800px; max-width: 800px; word-break: break-all; font-family: 'Courier New', Courier, monospace;">{{result2json}}</div>
